// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Visual builder components renders visual builder with covering index options 1`] = `
<body>
  <div>
    <div
      class="euiSpacer euiSpacer--l"
    />
    <div
      class="euiText euiText--medium"
      data-test-subj="covering-index-builder"
    >
      <h3>
        Covering index definition
      </h3>
    </div>
    <div
      class="euiSpacer euiSpacer--s"
    />
    <div
      class="euiFlexGroup euiFlexGroup--gutterExtraSmall euiFlexGroup--directionColumn euiFlexGroup--responsive"
    >
      <div
        class="euiFlexItem euiFlexItem--flexGrowZero"
      >
        <span
          class="euiExpression euiExpression-isUppercase euiExpression--success"
        >
          <span
            class="euiExpression__description"
          >
            CREATE INDEX
          </span>
           
          <span
            class="euiExpression__value"
          >
            cv-idx
          </span>
        </span>
      </div>
      <div
        class="euiFlexItem"
      >
        <span
          class="euiExpression euiExpression-isUppercase euiExpression--accent"
        >
          <span
            class="euiExpression__description"
          >
            ON
          </span>
           
          <span
            class="euiExpression__value"
          >
            ..
          </span>
        </span>
        <div
          class="euiPopover euiPopover--anchorDownLeft"
          id="coveringIndexFieldsPopOver"
        >
          <div
            class="euiPopover__anchor"
          >
            <button
              class="euiExpression euiExpression-isClickable euiExpression-isUppercase euiExpression--success"
            >
              <span
                class="euiExpression__description"
              />
               
              <span
                class="euiExpression__value"
              >
                (add fields here)
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Visual builder components renders visual builder with default options 1`] = `
<body>
  <div>
    <div
      class="euiSpacer euiSpacer--l"
    />
    <div
      class="euiText euiText--medium"
      data-test-subj="skipping-index-builder"
    >
      <h3>
        Skipping index definition
      </h3>
    </div>
    <div
      class="euiSpacer euiSpacer--s"
    />
    <div
      class="euiBasicTable"
      itemid="id"
    >
      <div>
        <div
          class="euiTableHeaderMobile"
        >
          <div
            class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsBaseline euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow"
          >
            <div
              class="euiFlexItem euiFlexItem--flexGrowZero"
            />
            <div
              class="euiFlexItem euiFlexItem--flexGrowZero"
            />
          </div>
        </div>
        <table
          class="euiTable euiTable--responsive"
          id="random_html_id"
          tabindex="-1"
        >
          <caption
            class="euiScreenReaderOnly euiTableCaption"
          />
          <thead>
            <tr>
              <th
                class="euiTableHeaderCell"
                data-test-subj="tableHeaderCell_fieldName_0"
                role="columnheader"
                scope="col"
              >
                <span
                  class="euiTableCellContent"
                >
                  <span
                    class="euiTableCellContent__text"
                    title="Field name"
                  >
                    Field name
                  </span>
                </span>
              </th>
              <th
                class="euiTableHeaderCell"
                data-test-subj="tableHeaderCell_dataType_1"
                role="columnheader"
                scope="col"
              >
                <span
                  class="euiTableCellContent"
                >
                  <span
                    class="euiTableCellContent__text"
                    title="Datatype"
                  >
                    Datatype
                  </span>
                </span>
              </th>
              <th
                class="euiTableHeaderCell"
                data-test-subj="tableHeaderCell_Acceleration method_2"
                role="columnheader"
                scope="col"
              >
                <span
                  class="euiTableCellContent"
                >
                  <span
                    class="euiTableCellContent__text"
                    title="Acceleration method"
                  >
                    Acceleration method
                  </span>
                </span>
              </th>
              <th
                class="euiTableHeaderCell"
                data-test-subj="tableHeaderCell_Delete_3"
                role="columnheader"
                scope="col"
              >
                <span
                  class="euiTableCellContent"
                >
                  <span
                    class="euiTableCellContent__text"
                    title="Delete"
                  >
                    Delete
                  </span>
                </span>
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class="euiTableRow"
            >
              <td
                class="euiTableRowCell euiTableRowCell--isMobileFullWidth"
                colspan="4"
              >
                <div
                  class="euiTableCellContent euiTableCellContent--alignCenter"
                >
                  <span
                    class="euiTableCellContent__text"
                  >
                    You have no definitions defined.
                  </span>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
    >
      <div
        class="euiFlexItem"
      >
        <div
          class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--wrap"
        >
          <div
            class="euiFlexItem euiFlexItem--flexGrowZero"
          >
            <button
              class="euiButton euiButton--primary euiButton--small"
              type="button"
            >
              <span
                class="euiButtonContent euiButton__content"
              >
                <span
                  class="euiButton__text"
                >
                  Add fields
                </span>
              </span>
            </button>
          </div>
          <div
            class="euiFlexItem euiFlexItem--flexGrowZero"
          >
            <button
              class="euiButton euiButton--danger euiButton--small"
              type="button"
            >
              <span
                class="euiButtonContent euiButton__content"
              >
                <span
                  class="euiButton__text"
                >
                  Bulk delete
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        class="euiFlexItem euiFlexItem--flexGrowZero"
      >
        <button
          class="euiButton euiButton--primary euiButton--small"
          type="button"
        >
          <span
            class="euiButtonContent euiButton__content"
          >
            <span
              class="euiButton__text"
            >
              Generate
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`Visual builder components renders visual builder with materialized view options 1`] = `
<body>
  <div>
    <div
      class="euiSpacer euiSpacer--l"
    />
    <div
      class="euiText euiText--medium"
      data-test-subj="covering-index-builder"
    >
      <h3>
        Materialized view definition
      </h3>
    </div>
    <div
      class="euiSpacer euiSpacer--s"
    />
    <span
      class="euiExpression euiExpression-isUppercase euiExpression--success"
    >
      <span
        class="euiExpression__description"
      >
        CREATE MATERIALIZED VIEW
      </span>
       
      <span
        class="euiExpression__value"
      >
        ..skipping
      </span>
    </span>
    <div
      class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
    >
      <div
        class="euiFlexItem euiFlexItem--flexGrowZero"
      >
        <span
          class="euiExpression euiExpression-isUppercase euiExpression--accent"
        >
          <span
            class="euiExpression__description"
          >
            AS SELECT
          </span>
           
        </span>
      </div>
      <div
        class="euiFlexItem euiFlexItem--flexGrowZero"
      >
        <div
          class="euiPopover euiPopover--anchorDownCenter"
        >
          <div
            class="euiPopover__anchor"
          >
            <button
              aria-label="add column"
              class="euiButtonEmpty euiButtonEmpty--primary euiButtonEmpty--xSmall"
              type="button"
            >
              <span
                class="euiButtonContent euiButtonEmpty__content"
              >
                <svg
                  aria-hidden="true"
                  class="euiIcon euiIcon--small euiIcon--inherit euiIcon-isLoading euiButtonContent__icon"
                  focusable="false"
                  height="16"
                  role="img"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
                  />
                </svg>
                <span
                  class="euiButtonEmpty__text"
                >
                  Add Column
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--directionColumn euiFlexGroup--responsive"
    />
    <div
      class="euiSpacer euiSpacer--s"
    />
    <span
      class="euiExpression euiExpression-isUppercase euiExpression--success"
    >
      <span
        class="euiExpression__description"
      >
        FROM
      </span>
       
      <span
        class="euiExpression__value"
      >
        ..
      </span>
    </span>
    <div
      class="euiSpacer euiSpacer--s"
    />
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <div
        class="euiPopover euiPopover--anchorDownLeft"
        id="groupByTumblePopOver"
      >
        <div
          class="euiPopover__anchor"
        >
          <button
            class="euiExpression euiExpression-isClickable euiExpression-isUppercase euiExpression--success"
          >
            <span
              class="euiExpression__description"
            >
              GROUP BY
            </span>
             
            <span
              class="euiExpression__value"
            >
              TUMBLE(, '1 minute')
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Visual builder components renders visual builder with skipping index options 1`] = `
<body>
  <div>
    <div
      class="euiSpacer euiSpacer--l"
    />
    <div
      class="euiText euiText--medium"
      data-test-subj="skipping-index-builder"
    >
      <h3>
        Skipping index definition
      </h3>
    </div>
    <div
      class="euiSpacer euiSpacer--s"
    />
    <div
      class="euiBasicTable"
      itemid="id"
    >
      <div>
        <div
          class="euiTableHeaderMobile"
        >
          <div
            class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsBaseline euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow"
          >
            <div
              class="euiFlexItem euiFlexItem--flexGrowZero"
            />
            <div
              class="euiFlexItem euiFlexItem--flexGrowZero"
            />
          </div>
        </div>
        <table
          class="euiTable euiTable--responsive"
          id="random_html_id"
          tabindex="-1"
        >
          <caption
            class="euiScreenReaderOnly euiTableCaption"
          />
          <thead>
            <tr>
              <th
                class="euiTableHeaderCell"
                data-test-subj="tableHeaderCell_fieldName_0"
                role="columnheader"
                scope="col"
              >
                <span
                  class="euiTableCellContent"
                >
                  <span
                    class="euiTableCellContent__text"
                    title="Field name"
                  >
                    Field name
                  </span>
                </span>
              </th>
              <th
                class="euiTableHeaderCell"
                data-test-subj="tableHeaderCell_dataType_1"
                role="columnheader"
                scope="col"
              >
                <span
                  class="euiTableCellContent"
                >
                  <span
                    class="euiTableCellContent__text"
                    title="Datatype"
                  >
                    Datatype
                  </span>
                </span>
              </th>
              <th
                class="euiTableHeaderCell"
                data-test-subj="tableHeaderCell_Acceleration method_2"
                role="columnheader"
                scope="col"
              >
                <span
                  class="euiTableCellContent"
                >
                  <span
                    class="euiTableCellContent__text"
                    title="Acceleration method"
                  >
                    Acceleration method
                  </span>
                </span>
              </th>
              <th
                class="euiTableHeaderCell"
                data-test-subj="tableHeaderCell_Delete_3"
                role="columnheader"
                scope="col"
              >
                <span
                  class="euiTableCellContent"
                >
                  <span
                    class="euiTableCellContent__text"
                    title="Delete"
                  >
                    Delete
                  </span>
                </span>
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class="euiTableRow euiTableRow-hasActions"
            >
              <td
                class="euiTableRowCell"
              >
                <div
                  class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
                >
                  Field name
                </div>
                <div
                  class="euiTableCellContent euiTableCellContent--truncateText"
                >
                  <span
                    class="euiTableCellContent__text"
                  >
                    field1
                  </span>
                </div>
              </td>
              <td
                class="euiTableRowCell"
              >
                <div
                  class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
                >
                  Datatype
                </div>
                <div
                  class="euiTableCellContent euiTableCellContent--truncateText"
                >
                  <span
                    class="euiTableCellContent__text"
                  >
                    string
                  </span>
                </div>
              </td>
              <td
                class="euiTableRowCell"
              >
                <div
                  class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
                >
                  Acceleration method
                </div>
                <div
                  class="euiTableCellContent euiTableCellContent--overflowingContent"
                >
                  <div
                    class="euiFormControlLayout euiFormControlLayout--compressed"
                  >
                    <div
                      class="euiFormControlLayout__childrenWrapper"
                    >
                      <select
                        aria-label="Use aria labels when no actual label is in use"
                        class="euiSelect euiSelect--compressed"
                        id="selectDocExample"
                      >
                        <option
                          value="PARTITION"
                        >
                          Partition
                        </option>
                        <option
                          value="VALUE_SET"
                        >
                          Value Set
                        </option>
                        <option
                          value="BLOOM_FILTER"
                        >
                          Bloom Filter
                        </option>
                      </select>
                      <div
                        class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
                      >
                        <span
                          class="euiFormControlLayoutCustomIcon"
                        >
                          <svg
                            aria-hidden="true"
                            class="euiIcon euiIcon--small euiIcon-isLoading euiFormControlLayoutCustomIcon__icon"
                            focusable="false"
                            height="16"
                            role="img"
                            viewBox="0 0 16 16"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
                            />
                          </svg>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </td>
              <td
                class="euiTableRowCell"
              >
                <div
                  class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
                >
                  Delete
                </div>
                <div
                  class="euiTableCellContent euiTableCellContent--overflowingContent"
                >
                  <button
                    class="euiButtonIcon euiButtonIcon--danger euiButtonIcon--empty euiButtonIcon--small"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="euiIcon euiIcon--medium euiIcon--inherit euiIcon-isLoading euiButtonIcon__icon"
                      focusable="false"
                      height="16"
                      role="img"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
                      />
                    </svg>
                  </button>
                </div>
              </td>
            </tr>
            <tr
              class="euiTableRow euiTableRow-hasActions"
            >
              <td
                class="euiTableRowCell"
              >
                <div
                  class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
                >
                  Field name
                </div>
                <div
                  class="euiTableCellContent euiTableCellContent--truncateText"
                >
                  <span
                    class="euiTableCellContent__text"
                  >
                    field2
                  </span>
                </div>
              </td>
              <td
                class="euiTableRowCell"
              >
                <div
                  class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
                >
                  Datatype
                </div>
                <div
                  class="euiTableCellContent euiTableCellContent--truncateText"
                >
                  <span
                    class="euiTableCellContent__text"
                  >
                    number
                  </span>
                </div>
              </td>
              <td
                class="euiTableRowCell"
              >
                <div
                  class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
                >
                  Acceleration method
                </div>
                <div
                  class="euiTableCellContent euiTableCellContent--overflowingContent"
                >
                  <div
                    class="euiFormControlLayout euiFormControlLayout--compressed"
                  >
                    <div
                      class="euiFormControlLayout__childrenWrapper"
                    >
                      <select
                        aria-label="Use aria labels when no actual label is in use"
                        class="euiSelect euiSelect--compressed"
                        id="selectDocExample"
                      >
                        <option
                          value="PARTITION"
                        >
                          Partition
                        </option>
                        <option
                          value="VALUE_SET"
                        >
                          Value Set
                        </option>
                        <option
                          value="MIN_MAX"
                        >
                          Min Max
                        </option>
                        <option
                          value="BLOOM_FILTER"
                        >
                          Bloom Filter
                        </option>
                      </select>
                      <div
                        class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
                      >
                        <span
                          class="euiFormControlLayoutCustomIcon"
                        >
                          <svg
                            aria-hidden="true"
                            class="euiIcon euiIcon--small euiIcon-isLoading euiFormControlLayoutCustomIcon__icon"
                            focusable="false"
                            height="16"
                            role="img"
                            viewBox="0 0 16 16"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
                            />
                          </svg>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </td>
              <td
                class="euiTableRowCell"
              >
                <div
                  class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
                >
                  Delete
                </div>
                <div
                  class="euiTableCellContent euiTableCellContent--overflowingContent"
                >
                  <button
                    class="euiButtonIcon euiButtonIcon--danger euiButtonIcon--empty euiButtonIcon--small"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="euiIcon euiIcon--medium euiIcon--inherit euiIcon-isLoading euiButtonIcon__icon"
                      focusable="false"
                      height="16"
                      role="img"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
                      />
                    </svg>
                  </button>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <div>
        <div
          class="euiSpacer euiSpacer--m"
        />
        <div
          class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow"
        >
          <div
            class="euiFlexItem euiFlexItem--flexGrowZero"
          >
            <div
              class="euiPopover euiPopover--anchorUpRight"
            >
              <div
                class="euiPopover__anchor"
              >
                <button
                  class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--xSmall"
                  data-test-subj="tablePaginationPopoverButton"
                  type="button"
                >
                  <span
                    class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
                  >
                    <svg
                      aria-hidden="true"
                      class="euiIcon euiIcon--small euiIcon--inherit euiIcon-isLoading euiButtonContent__icon"
                      focusable="false"
                      height="16"
                      role="img"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
                      />
                    </svg>
                    <span
                      class="euiButtonEmpty__text"
                    >
                      Rows per page
                      : 
                      20
                    </span>
                  </span>
                </button>
              </div>
            </div>
          </div>
          <div
            class="euiFlexItem euiFlexItem--flexGrowZero"
          >
            <nav
              class="euiPagination"
            >
              <button
                aria-label="Previous page"
                class="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall"
                data-test-subj="pagination-button-previous"
                disabled=""
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="euiIcon euiIcon--medium euiIcon--inherit euiIcon-isLoading euiButtonIcon__icon"
                  focusable="false"
                  height="16"
                  role="img"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
                  />
                </svg>
              </button>
              <ul
                class="euiPagination__list"
              >
                <li
                  class="euiPagination__item"
                >
                  <button
                    aria-controls="random_html_id"
                    aria-current="true"
                    aria-label="Page 1 of 1"
                    class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--small euiButtonEmpty-isDisabled euiPaginationButton euiPaginationButton-isActive euiPaginationButton--hideOnMobile"
                    data-test-subj="pagination-button-0"
                    disabled=""
                    type="button"
                  >
                    <span
                      class="euiButtonContent euiButtonEmpty__content"
                    >
                      <span
                        class="euiButtonEmpty__text"
                      >
                        1
                      </span>
                    </span>
                  </button>
                </li>
              </ul>
              <button
                aria-label="Next page"
                class="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall"
                data-test-subj="pagination-button-next"
                disabled=""
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="euiIcon euiIcon--medium euiIcon--inherit euiIcon-isLoading euiButtonIcon__icon"
                  focusable="false"
                  height="16"
                  role="img"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
                  />
                </svg>
              </button>
            </nav>
          </div>
        </div>
      </div>
    </div>
    <div
      class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
    >
      <div
        class="euiFlexItem"
      >
        <div
          class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--wrap"
        >
          <div
            class="euiFlexItem euiFlexItem--flexGrowZero"
          >
            <button
              class="euiButton euiButton--primary euiButton--small"
              type="button"
            >
              <span
                class="euiButtonContent euiButton__content"
              >
                <span
                  class="euiButton__text"
                >
                  Add fields
                </span>
              </span>
            </button>
          </div>
          <div
            class="euiFlexItem euiFlexItem--flexGrowZero"
          >
            <button
              class="euiButton euiButton--danger euiButton--small"
              type="button"
            >
              <span
                class="euiButtonContent euiButton__content"
              >
                <span
                  class="euiButton__text"
                >
                  Bulk delete
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        class="euiFlexItem euiFlexItem--flexGrowZero"
      >
        <button
          class="euiButton euiButton--primary euiButton--small"
          type="button"
        >
          <span
            class="euiButtonContent euiButton__content"
          >
            <span
              class="euiButton__text"
            >
              Generate
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
</body>
`;
